--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -8,12 +8,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Check out repo
-      uses: actions/checkout@main
+      uses: actions/checkout@v3
+
+    - name: Set up Azure CLI
+      uses: azure/cli@v1
+
     - name: Install az ml extension
       run: az extension add -n ml -y
+
     - name: Azure login
       uses: azure/login@v1
       with:
-        creds: ${{secrets.AZURE_CREDENTIALS}}
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-
+    - name: Submit Azure Machine Learning job
+      run: |
+        az ml job create --file ./mlops/src/job.yml \
+                         --workspace-name mlflow-ci-cd \
+                         --resource-group mlflow_lab \
+                         --subscription dc4b0a56-819e-4361-a98f-6e3740275127
