--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -2,6 +2,16 @@ name: Manually trigger an Azure Machine Learning job
 
 on:
   workflow_dispatch:
+  pull_request:
+    branches: [ main ]
+
+env:
+  workspace-name: mlflow-ci-cd # name of the Azure Machine Learning workspace
+  resource-group: mlflow_lab   # name of the Azure resource group
+
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
   train:
@@ -10,20 +20,15 @@ jobs:
     - name: Check out repo
       uses: actions/checkout@v3
 
-    - name: Set up Azure CLI
-      uses: azure/cli@v1
-
     - name: Install az ml extension
       run: az extension add -n ml -y
 
-    - name: Azure login
+    - name: 'Az CLI login'
       uses: azure/login@v1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-    - name: Submit Azure Machine Learning job
-      run: |
-        az ml job create --file ./mlops/src/job.yml \
-                         --workspace-name mlflow-ci-cd \
-                         --resource-group mlflow_lab \
-                         --subscription dc4b0a56-819e-4361-a98f-6e3740275127
+    - name: Trigger Azure ML job
+      run: az ml job create --file ./mlops/src/job.yml --workspace-name ${{ env.workspace-name }} --resource-group ${{ env.resource-group }}
