--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -31,4 +31,4 @@ jobs:
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     - name: Trigger Azure ML job
-      run: az ml job create --file ./mlops/src/job.yml --workspace-name ${{ env.workspace-name }} --resource-group ${{ env.resource-group }}
+      run: az ml job create --file ./src/job.yml --workspace-name ${{ env.workspace-name }} --resource-group ${{ env.resource-group }}
