--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -1,65 +1,110 @@
-name: Manually trigger an Azure Machine Learning job
+name: Train ML Model with Linting, Unit Test, Dev and Prod Environments
+
 on:
-  workflow_dispatch:
-  pull_request:
-    branches: [ main ]
+  push:
+    branches:
+      - main
+
 env:
-  workspace-name: mlflow-ci-cd # name of the Azure Machine Learning workspace
-  resource-group: mlflow_lab   # name of the Azure resource group
+  workspace-name: mlflow-ci-cd
+  resource-group: mlflow_lab
+
 permissions:
   id-token: write
   contents: read
+
 jobs:
   linting:
-    name: Linting
+    name: Run Linting (Flake8)
     runs-on: ubuntu-latest
     steps:
-    - name: Check out repo
-      uses: actions/checkout@v3
-    - name: Use Python version 3.8
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.8'
-    - name: Install Flake8
-      run: |
-        python -m pip install flake8
-    - name: Run linting tests
-      run: |
-        flake8 src/model/
-        
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.8'
+
+      - name: Install Flake8
+        run: |
+          python -m pip install flake8
+
+      - name: Run lint checks
+        run: |
+          flake8 src/model/
+
   unit-test:
-    name: Unit Testing
+    name: Run Unit Tests (pytest)
     runs-on: ubuntu-latest
-    needs: [linting]
+    needs: linting
     steps:
-    - name: Check out repo
-      uses: actions/checkout@v3
-    - name: Use Python version 3.8
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.8'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Run unit tests
-      run: |
-        pytest tests/test_train.py
-        
-  train:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.8'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install pytest
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: Run tests
+        run: |
+          pytest tests/test_train.py
+
+  experiment:
+    name: Train in Development
+    environment: development
     runs-on: ubuntu-latest
-    needs: [unit-test]
+    needs: unit-test
     steps:
-    - name: Check out repo
-      uses: actions/checkout@v3
-    - name: Install az ml extension
-      run: az extension add -n ml -y
-    - name: 'Az CLI login'
-      uses: azure/login@v1
-      with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-    - name: Trigger Azure ML job
-      run: az ml job create --file ./src/job.yml --workspace-name ${{ env.workspace-name }} --resource-group ${{ env.resource-group }}
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Install Azure ML CLI extension
+        run: az extension add -n ml -y
+
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Submit Azure ML Job (Development Dataset)
+        run: |
+          az ml job create --file ./src/job.yml \
+          --inputs data_path=azureml://datastores/workspaceblobstore/paths/diabetes-dev-folder \
+          --workspace-name ${{ env.workspace-name }} \
+          --resource-group ${{ env.resource-group }}
+
+  production:
+    name: Train in Production
+    environment: production
+    runs-on: ubuntu-latest
+    needs: experiment
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Install Azure ML CLI extension
+        run: az extension add -n ml -y
+
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Submit Azure ML Job (Production Dataset)
+        run: |
+          az ml job create --file ./src/job.yml \
+          --inputs data_path=azureml://datastores/workspaceblobstore/paths/diabetes-prod-folder \
+          --workspace-name ${{ env.workspace-name }} \
+          --resource-group ${{ env.resource-group }}
