--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -1,4 +1,4 @@
-name: Train ML Model with Linting, Unit Test, Dev and Prod Environments
+name: Train ML Model with Linting, Testing, Dev and Prod Environments
 
 on:
   push:
@@ -15,10 +15,10 @@ permissions:
 
 jobs:
   linting:
-    name: Run Linting (Flake8)
+    name: Run Linting
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout Code
         uses: actions/checkout@v3
 
       - name: Set up Python
@@ -26,20 +26,20 @@ jobs:
         with:
           python-version: '3.8'
 
-      - name: Install Flake8
+      - name: Install flake8
         run: |
-          python -m pip install flake8
+          pip install flake8
 
-      - name: Run lint checks
+      - name: Run flake8
         run: |
           flake8 src/model/
 
   unit-test:
-    name: Run Unit Tests (pytest)
+    name: Run Unit Tests
     runs-on: ubuntu-latest
     needs: linting
     steps:
-      - name: Checkout repo
+      - name: Checkout Code
         uses: actions/checkout@v3
 
       - name: Set up Python
@@ -47,10 +47,10 @@ jobs:
         with:
           python-version: '3.8'
 
-      - name: Install dependencies
+      - name: Install pytest and requirements
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install pytest
+          pip install --upgrade pip
+          pip install pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run tests
@@ -58,12 +58,12 @@ jobs:
           pytest tests/test_train.py
 
   experiment:
-    name: Train in Development
+    name: Train Model (Development)
     environment: development
     runs-on: ubuntu-latest
     needs: unit-test
     steps:
-      - name: Checkout repo
+      - name: Checkout Code
         uses: actions/checkout@v3
 
       - name: Install Azure ML CLI extension
@@ -79,17 +79,16 @@ jobs:
       - name: Submit Azure ML Job (Development Dataset)
         run: |
           az ml job create --file ./src/job.yml \
-          --inputs data_path=azureml://datastores/workspaceblobstore/paths/diabetes-dev-folder \
           --workspace-name ${{ env.workspace-name }} \
           --resource-group ${{ env.resource-group }}
 
   production:
-    name: Train in Production
+    name: Train Model (Production)
     environment: production
     runs-on: ubuntu-latest
     needs: experiment
     steps:
-      - name: Checkout repo
+      - name: Checkout Code
         uses: actions/checkout@v3
 
       - name: Install Azure ML CLI extension
@@ -102,9 +101,9 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Submit Azure ML Job (Production Dataset)
+      - name: Submit Azure ML Job (Production Dataset Override)
         run: |
           az ml job create --file ./src/job.yml \
-          --inputs data_path=azureml://datastores/workspaceblobstore/paths/diabetes-prod-folder \
+          --set inputs.training_data.path=azureml:diabetes-prod-folder:1 \
           --workspace-name ${{ env.workspace-name }} \
           --resource-group ${{ env.resource-group }}
