--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -1,4 +1,4 @@
-name: Train ML Model with Linting, Testing, Dev and Prod Environments
+name: Train, Register, and Deploy ML Model with Azure ML and GitHub Actions
 
 on:
   push:
@@ -15,7 +15,7 @@ permissions:
 
 jobs:
   linting:
-    name: Run Linting
+    name: Linting
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -29,13 +29,12 @@ jobs:
       - name: Install flake8
         run: |
           pip install flake8
-
       - name: Run flake8
         run: |
           flake8 src/model/
 
   unit-test:
-    name: Run Unit Tests
+    name: Unit Testing
     runs-on: ubuntu-latest
     needs: linting
     steps:
@@ -53,7 +52,7 @@ jobs:
           pip install pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Run tests
+      - name: Run Unit Tests
         run: |
           pytest tests/test_train.py
 
@@ -66,17 +65,17 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Install Azure ML CLI extension
+      - name: Install Azure ML CLI
         run: az extension add -n ml -y
 
-      - name: Login to Azure
+      - name: Azure CLI Login
         uses: azure/login@v1
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Submit Azure ML Job (Development Dataset)
+      - name: Submit Azure ML Job (Dev)
         run: |
           az ml job create --file ./src/job.yml \
           --workspace-name ${{ env.workspace-name }} \
@@ -91,19 +90,84 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Install Azure ML CLI extension
+      - name: Install Azure ML CLI
         run: az extension add -n ml -y
 
-      - name: Login to Azure
+      - name: Azure CLI Login
         uses: azure/login@v1
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Submit Azure ML Job (Production Dataset Override)
+      - name: Submit Azure ML Job (Prod dataset)
         run: |
           az ml job create --file ./src/job.yml \
           --set inputs.training_data.path=azureml:diabetes-prod-folder:1 \
           --workspace-name ${{ env.workspace-name }} \
           --resource-group ${{ env.resource-group }}
+
+  register:
+    name: Register Latest Model
+    runs-on: ubuntu-latest
+    environment: production
+    needs: production
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Install Azure ML CLI
+        run: az extension add -n ml -y
+
+      - name: Azure CLI Login
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Register Model from Latest Run
+        run: |
+          LAST_RUN_ID=$(az ml job list --workspace-name ${{ env.workspace-name }} --resource-group ${{ env.resource-group }} --query "[?display_name=='diabetes-classification-experiment'] | [0].name" -o tsv)
+          echo "Last Run ID: $LAST_RUN_ID"
+          az ml model create --name diabetes-classification-model \
+            --path azureml://jobs/$LAST_RUN_ID/outputs/model/ \
+            --workspace-name ${{ env.workspace-name }} \
+            --resource-group ${{ env.resource-group }}
+
+  deploy:
+    name: Deploy Latest Model to Endpoint
+    runs-on: ubuntu-latest
+    environment: production
+    needs: register
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Install Azure ML CLI
+        run: az extension add -n ml -y
+
+      - name: Azure CLI Login
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Get Latest Model Version
+        id: get_model
+        run: |
+          MODEL_VERSION=$(az ml model list --name diabetes-classification-model --query "[0].version" -o tsv)
+          echo "MODEL_VERSION=$MODEL_VERSION" >> $GITHUB_ENV
+
+      - name: Deploy Model to Endpoint
+        run: |
+          az ml online-deployment create \
+            --endpoint-name diabetes-endpoint \
+            --name diabetes-deployment \
+            --model azureml:diabetes-classification-model:${{ env.MODEL_VERSION }} \
+            --instance-type Standard_DS3_v2 \
+            --instance-count 1 \
+            --workspace-name ${{ env.workspace-name }} \
+            --resource-group ${{ env.resource-group }} \
+            --all-traffic
